# gea-telegram-bot

./: .gitignore  Dockerfile  README.md  manage.py  setup.cfg  stored_proc.sql
appliances/: admin.py  models.py
appliances/management/commands/: import_appliances.py
appliances/migrations/: 0001_initial.py
appointments/: admin.py  models.py
appointments/migrations/: 0001_initial.py  0002_appointment_user.py
gea_bot/: settings.py  urls.py  wsgi.py
pin_codes/: __init__.py  admin.py  apps.py  models.py
pin_codes/migrations/: 0001_initial.py
req/: combined.txt  dev.in  dev.txt  main.in  main.txt
scripts/: Caddyfile  build-deps.sh  docker-run.sh  pip-install.sh  run-dev.sh  run-prod.sh  send_email.py
telebot/: bot.py  util.py
telebot/management/commands/: runtelebot.py
users/: admin.py  models.py
users/migrations/: 0001_initial.py  0002_auto_20180914_0339.py
users/templates/: home.html
