[metadata]
name = gea_bot

[options]
python_requires = >=3.8.0
install_requires =
    django
    django-click
    django-phonenumber-field
    googlemaps
    gunicorn
    python-telegram-bot
    python-decouple
    psycopg2-binary
    phonenumbers
    django-extensions
    google-api-python-client
    google-auth-httplib2
    google-auth-oauthlib

[options.extras_require]
dev =
    mypy
